...
  @override
  State<SwipingScreenFromTo> createState() => _SwipingScreenFromToState();
}

class _SwipingScreenFromToState extends State<SwipingScreenFromTo> {
  int selectedIndex = 0;
  final List<String> items = ['Item 1', 'Item 2', 'Item 3', 'Item 4', 'Item 5'];

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: Theme.of(context).colorScheme.surfaceContainer,
      body: SafeArea(
...
